@@ -1,1 +1,5 @@
 This is a client part of the project. Here is a login system for clubs and can participate in auction
+
+
+To run the executable .jar file in out folder write following in cmd :
+java --module-path "path to lib\lib" --add-modules javafx.controls,javafx.fxml -jar "C:\Users\Public\Documents\serverClientJava\out\artifacts\serverClientJava_jar\serverClientJava.jar"
